--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -953,7 +953,7 @@ i{
 .parrafo-5{
   color: #000000;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 600;
+  font-weight: 600;
   margin: 0%;
   padding: 0%;
   font-size: clamp(16.5px, 1.5vw, 21px);
@@ -962,7 +962,7 @@ i{
 .parrafo-6{
   color: #000000;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 600;
+  font-weight: 600;
   margin: 0%;
   padding: 0%;
   font-size: clamp(16px, 1.5vw, 19px);
